* s/foo\.jp/example.jp/g

--- a/ChangeLog.1
+++ b/ChangeLog.1
@@ -476,8 +476,8 @@ v1.3.0.0-beta-9
 	* インデックスに登録されている文書の数を保持する NMZ.total という
 	  ファイルを新たに作ることにした
 	* <SELECT NAME="subquery">
-	  <OPTION VALUE="+url:/^http://foo.bar.jp/aaaa//">aaaa
-	  <OPTION VALUE="+url:/^http://foo.bar.jp/bbbb//">bbbb
+	  <OPTION VALUE="+url:/^http://foo.example.jp/aaaa//">aaaa
+	  <OPTION VALUE="+url:/^http://foo.example.jp/bbbb//">bbbb
 	  ...
 	  のように CGI のときに 検索式に subquery を追加可能にした。
 	  - [Koji Kishi <kis@hdsoft.sony.co.jp>] - comment
